Update member photo, fix file spacing

--- a/src/css/photos.css
+++ b/src/css/photos.css
@@ -53,9 +53,9 @@
 }
 
 .portrait-sandra-pan {
-    width: 140%;
-    transform: translate(-14%, 0%);
-    object-position: 50% 75%;
+    width: 125%;
+    transform: translate(-8%, 0%);
+    object-position: 50% 52%;
 }
 
 .portrait-amanda-lo {
